Внесены изменения описанные преподавателем

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
             id="paragraph"
             name="paragraph"
           />
-          <input type="text" placeholder="Ссылка на картинку" id="file" name="file" />
+          <input
+            type="text"
+            placeholder="Ссылка на картинку"
+            id="file"
+            name="file"
+          />
           <button type="submit" class="submit">Отправить</button>
         </div>
       </header>
